# bapi

./: Dockerfile  run_service
.github/workflows/: main.yml
frontend/: .eslintrc.json  .stylelintrc  index.html  package-lock.json  package.json  run_bapi  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  QueryContext.tsx  QueryRecord.ts  TableContext.tsx  bapiQueryRecord.ts  columnInfo.ts  columnRecord.tsx  dataManager.ts  filterRecord.ts  main.tsx  nullthrows.ts  queryConsts.ts  queryRecord.ts  queryRecordReducer.ts  queryRecordUtils.ts  queryReducer.ts  queryStore.ts  tsConsts.ts  useAggregation.tsx  useFilters.tsx  useQuerySelector.ts  vite-env.d.ts
frontend/src/components/: AggregateSection.tsx  Dropdown.tsx  FilterField.tsx  FilterFields.tsx  FiltersSection.tsx  GroupbySection.tsx  ResultTable.tsx  RowsQueryResultTable.tsx  TableQueryResult.tsx  TableQueryResultTable.tsx  TargetColsSection.tsx  TimeRangePicker.tsx  TimeRangeSection.tsx  TokenizedTextField.tsx
infra/: .gitignore  main.tf  terraform.tfvars  vars.tf
service/: .gitignore  BUILD.bazel  WORKSPACE  build_frontend_dev.sh  deps.bzl  deps.sh  go.mod  go.sum  pb.sh  run  run_web  setup_repo  setup_repo.sh
service/cmd/bapiserver/: BUILD.bazel  ingest.sh  main.go  ping.sh
service/cmd/webserver/: BUILD.bazel  main.go
service/internal/common/: BUILD.bazel  lib.go
service/internal/pb/: .gitignore  BUILD.bazel  bapi.proto  compile.sh
service/internal/server/: BUILD.bazel  server.go
service/internal/store/: BUILD.bazel  accumulator.go  aggregator.go  aggregator_op.go  aggregator_test.go  block.go  block_test.go  col_info_store.go  col_info_store_test.go  column_storage.go  column_storage_test.go  hasher.go  hasher_test.go  ingester.go  ingester_test.go  lib.go  lib_test.go  math_util.go  math_util_test.go  numeric_storage.go  numeric_storage_test.go  numeric_store.go  numeric_store_test.go  query.go  query_common.go  str_store.go  str_store_test.go  table.go  table_column.go  table_filter_blocks.go  table_query.go
service/internal/store/fixtures/: gen_fixture.py  small.json
