load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix bapi
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

alias(
    name = "server",
    actual = "//cmd/bapiserver:bapiserver",
)

alias(
    name = "gen",
    actual = ":gazelle",
)

alias(
    name = "deps",
    actual = ":gazelle-update-repos",
)
