load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")

# gazelle:prefix bapi
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

alias(
    name = "bapiserver",
    actual = "//cmd/bapiserver:bapiserver",
)

alias(
    name = "webserver",
    actual = "//cmd/webserver:webserver",
)

alias(
    name = "gen",
    actual = ":gazelle",
)

alias(
    name = "deps",
    actual = ":gazelle-update-repos",
)

pkg_files(
    name = "binary",
    srcs = [
        ":bapiserver",
        ":webserver",
    ],
)
