load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bapiserver_lib",
    srcs = ["main.go"],
    importpath = "bapi/cmd/bapiserver",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/common",
        "//internal/pb",
        "//internal/server",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "bapiserver",
    embed = [":bapiserver_lib"],
    visibility = ["//visibility:public"],
)
