load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "webserver_lib",
    srcs = ["main.go"],
    importpath = "bapi/cmd/webserver",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pb",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_rs_cors_wrapper_gin//:gin",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "webserver",
    # The user is responsible to make sure this exists, otherwise will get 404.
    data = glob(["static/**"]),
    embed = [":webserver_lib"],
    visibility = ["//visibility:public"],
)
