load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pb_proto",
    srcs = ["bapi.proto"],
    visibility = ["//:__subpackages__"],
)

go_proto_library(
    name = "pb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "bapi/internal/pb",
    proto = ":pb_proto",
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "pb",
    embed = [":pb_go_proto"],
    importpath = "bapi/internal/pb",
    visibility = ["//:__subpackages__"],
)
