load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "store",
    srcs = [
        "accumulator.go",
        "aggregator.go",
        "block.go",
        "col_info_store.go",
        "column_storage.go",
        "hasher.go",
        "ingester.go",
        "lib.go",
        "math_util.go",
        "numeric_store.go",
        "query_common.go",
        "str_store.go",
        "table.go",
        "table_filter_blocks.go",
        "table_query.go",
    ],
    importpath = "bapi/internal/store",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common",
        "//internal/pb",
        "@com_github_kelindar_bitmap//:bitmap",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "store_test",
    srcs = [
        "aggregator_test.go",
        "block_test.go",
        "col_info_store_test.go",
        "column_storage_test.go",
        "hasher_test.go",
        "ingester_test.go",
        "lib_test.go",
        "math_util_test.go",
        "numeric_store_test.go",
        "str_store_test.go",
    ],
    data = glob(["fixtures/*.json"]),
    embed = [":store"],
    deps = [
        "//internal/common",
        "//internal/pb",
        "@com_github_stretchr_testify//assert",
    ],
)
